--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,3 +29,4 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.6.0'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
